# iitm-pravartak-capstone

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
src/: catalog.py  main.py
src/api/: main.py
src/philosophy/: __init__.py  catalog.py  config.py  schemas.py  service.py
src/philosophy/api/: main.py
src/philosophy/pipelines/: __init__.py  embedding.py  generation.py  retrieval.py
src/pipelines/: embedding.py  retrieval.py
www/: package.json
www/app/: globals.css  layout.tsx  page.tsx
www/lib/: api-types.ts  api.ts
