[project]
name = "rag"
version = "0.1.0"
description = "IITM / Pravartak Capstone project - RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.3",
]

[tool.fastapi]
entrypoint = "src.api.main:app"
